2010-10-16  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed references to 'this' which Blizzard removed in 4.0.1

2010-10-13  Asa Ayers  <Asa.Ayers@Gmail.com>

- Better solution for item links.
- Updated TOC so it isn't considered out of date.

2010-10-12  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed item links for 4.0.1

2010-10-08  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 45 - Added the ability suppress COD warnings when mailing to characters on other accounts in Altoholic/DataStore. Instead of sending COD, ItemAuditor will send tracking info in the message. Thanks to Zerotorescue for giving me the solution to detect whether or not Postal or MailOpener is processing. It was the last step holding this back from being released.

2010-10-06  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 46 - Added DataStore_Characters to the list of dependencies. It should have been added with Ticket 43.

2010-10-02  Asa Ayers  <Asa.Ayers@Gmail.com>

- I removed the persistent queue (Ticket 33) It caused to many bugs and was blocking me from getting other things done. I think its something that will get implemented again once I figure out the best way to do it.
- Ticket 43 - Updated the way ItemAuditor counts how many of each item you own to only count your current faction.
- Ticket 42 - In order to fix an issue with having multiple items that are the same base item with different enchants, all costs are now tracked against the base item instead of the exact item.
- Fixed an issue with /ia invested that caused all items to display twice. This was introduced by the fix in Ticket 42.

2010-09-15  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 41 - Fixed a bug that occured if you created items without ever opening /ia crafting.
- Ticket 40 - Added options to enable counting guild bank inventory.

2010-09-03  Asa Ayers  <Asa.Ayers@Gmail.com>

- Re-enabled IA QuickAuctions decider. I unintentionally disabled it when working on the QAManager code.